# backend/app/models/registry.py
@@ -43,3 +43,4 @@ from app.modules.loans.workflow_models import (  # noqa: F401
 from app.modules.savings.models import SavingsAccount, SavingsProduct  # noqa: F401
 from app.modules.admin.models import Role, Staff  # noqa: F401
 from app.modules.users.models import Customer  # noqa: F401
+from app.modules.notifications.models import Notification  # noqa: F401
